@@ -1,10 +1,10 @@
-FROM mcr.microsoft.com/mmlspark/spark2.4:v4_mini
+FROM sparktest:latest
 MAINTAINER Dalitso Banda <dalitsohb@gmail.com>
 
 ADD patch_beam.patch /tmp/patch_beam.patch
 
-ENV Z_VERSION="git_master"
-ENV Z_COMMIT="2ea945f548a4e41312026d5ee1070714c155a11e"
+ENV Z_VERSION="0.9.0-preview1"
+# ENV Z_COMMIT="2ea945f548a4e41312026d5ee1070714c155a11e"
 ENV LOG_TAG="[ZEPPELIN_${Z_VERSION}]:" \
     Z_HOME="/zeppelin" \
     LANG=en_US.UTF-8 \
@@ -18,62 +18,29 @@ RUN echo "$LOG_TAG setting python dependencies" && \
     echo "$LOG_TAG Install essentials" && \
     apk add --no-cache git wget curl && \
     apk add --no-cache && \
-    apk --no-cache --update add ca-certificates wget && \
+    apk --no-cache --update add ca-certificates && \
     apk --no-cache --update add libstdc++ libstdc++6 && \
     wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
     wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.26-r0/glibc-2.26-r0.apk && \
     apk del --no-cache --update libc6-compat && \
-    apk add --no-cache --update glibc-2.26-r0.apk && \
-    echo "$LOG_TAG Getting maven" && \
-    wget http://www.eu.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz && \
-    tar -zxf apache-maven-3.3.9-bin.tar.gz -C /usr/local/ && \
-    rm apache-maven-3.3.9-bin.tar.gz && \
-    ln -s /usr/local/apache-maven-3.3.9/bin/mvn /usr/local/bin/mvn && \
-    echo "$LOG_TAG install nodejs" && \
-    apk add --no-cache --update nodejs nodejs-npm && \
-    echo "$LOG_TAG Download Zeppelin source" && \
-    export LD_LIBRARY_PATH=/lib:/usr/lib/:$LD_LIBRARY_PATH && \
-    git clone https://github.com/apache/zeppelin.git /zeppelin-${Z_VERSION}-bin-all && \
-    mv /zeppelin-${Z_VERSION}-bin-all ${Z_HOME}_src && \
-    mkdir ${Z_HOME}/notebook/mmlspark -p && \
-    cd ${Z_HOME}_src && \
-    git checkout ${Z_COMMIT} && \
-    echo '{ "allow_root": true }' > /root/.bowerrc && \
-    echo "$LOG_TAG building zeppelin" && \
-    cd ${Z_HOME}_src && \
-    git status  && \
-    mv /tmp/patch_beam.patch . && \
-    git apply --ignore-space-change --ignore-whitespace patch_beam.patch && \
-    ./dev/change_scala_version.sh 2.11 && \
-    cd ${Z_HOME}_src/zeppelin-web && \
-    rm package-lock.json && \
-    mkdir -p /usr/local/lib/node_modules && \
-    npm update -g && \
-    npm install -g -y @angular/cli && \
-    npm install -g -y grunt-cli bower && \
-    npm update -g && \
-    bower install && \
-    npm install && \
-    mvn -e -B package -DskipTests -Pscala-2.11 -Pbuild-distr && \
-    cd ${Z_HOME}_src && \
-    export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=256m" && \
-    mvn -e -B package -DskipTests -Pscala-2.11 -Pbuild-distr && \
-    tar xvf ${Z_HOME}_src/zeppelin-distribution/target/zeppelin-0.9.0-SNAPSHOT.tar.gz && \
-    rm -rf ${Z_HOME}/* && \
-    mv zeppelin-0.9.0-SNAPSHOT ${Z_HOME}_dist && \
-    mv ${Z_HOME}_dist/* ${Z_HOME} && \
-    echo "$LOG_TAG Cleanup" && \
-    rm -rf /usr/local/apache-maven-3.3.9 && \
-    npm uninstall -g @angular/cli grunt-cli bower && \
-    apk del --no-cache --update nodejs nodejs-npm && \
-    rm -rf /usr/local/apache-maven-3.3.9 && \
-    rm -rf ${Z_HOME}_dist && \
-    rm -rf ${Z_HOME}_src && \
-    rm -rf /root/.ivy2 && \
-    rm -rf /root/.m2 && \
-    rm -rf /root/.npm && \
-    rm -rf /root/.cache && \
-    rm -rf /tmp/* && \
+    apk add --no-cache --update glibc-2.26-r0.apk
+    # echo "$LOG_TAG install nodejs" && \
+    # apk add --no-cache --update nodejs nodejs-npm
+
+RUN echo "$LOG_TAG Download Zeppelin binary" && \
+    wget -O /tmp/zeppelin-${Z_VERSION}-bin-all.tgz http://archive.apache.org/dist/zeppelin/zeppelin-${Z_VERSION}/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    tar -zxvf /tmp/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    rm -rf /tmp/zeppelin-${Z_VERSION}-bin-all.tgz && \
+    mkdir -p ${Z_HOME} && \
+    mv /zeppelin-${Z_VERSION}-bin-all/* ${Z_HOME}/ && \
+    chown -R root:root ${Z_HOME} && \
+    mkdir -p ${Z_HOME}/logs ${Z_HOME}/run ${Z_HOME}/webapps && \
+    # Allow process to edit /etc/passwd, to create a user entry for zeppelin
+    chgrp root /etc/passwd && chmod ug+rw /etc/passwd && \
+    # Give access to some specific folders
+    chmod -R 775 "${Z_HOME}/logs" "${Z_HOME}/run" "${Z_HOME}/notebook" "${Z_HOME}/conf" && \
+    # Allow process to create new folders (e.g. webapps)
+    chmod 775 ${Z_HOME} && \
     echo "deleting rarely used intepretors" && \
     rm -rf ${Z_HOME}/interpreter/pig && \
     rm -rf ${Z_HOME}/interpreter/flink && \
@@ -94,16 +61,18 @@ RUN echo "$LOG_TAG setting python dependencies" && \
     rm -rf ${Z_HOME}/interpreter/neo4j && \
     rm -rf ${Z_HOME}/interpreter/livy && \
     rm -rf ${Z_HOME}/interpreter/angular && \
-    rm -rf ${Z_HOME}/interpreter/hbase && \
+    rm -rf ${Z_HOME}/interpreter/hbase
 
-    echo "$LOG_TAG installing python related packages" && \
+RUN echo "$LOG_TAG installing python related packages" && \
     apk add --no-cache g++ python-dev python3-dev build-base wget freetype-dev libpng-dev openblas-dev && \
     pip3 install -U pip && \
     pip3 install --no-cache-dir -U pip setuptools wheel && \
-    pip3 install --no-cache-dir numpy  matplotlib pyspark&& \
-    pip3 uninstall -y setuptools wheel && \
+    # pip3 install --no-cache-dir numpy  matplotlib pandas && \
+    rm /usr/bin/python && \
+    rm /usr/bin/pip && \
+    ln -s /usr/bin/python3 /usr/bin/python && \ 
+    ln -s /usr/bin/pip3 /usr/bin/pip && \
     echo "$LOG_TAG Cleanup" && \
-    apk del g++ python-dev python3-dev build-base freetype-dev libpng-dev openblas-dev && \
     rm -rf /root/.npm && \
     rm -rf /root/.m2 && \
     rm -rf /root/.cache && \
@@ -112,6 +81,7 @@ RUN echo "$LOG_TAG setting python dependencies" && \
 ADD jars /jars
 
 # add notebooks
+RUN mkdir ${Z_HOME}/notebook/mmlspark -p
 ADD mmlsparkExamples/ ${Z_HOME}/notebook/mmlspark/
 
 ADD spark-defaults.conf /opt/spark/conf/spark-defaults.conf
